syntax = "proto3";

message LockRequest {
    string lock_name = 1;
    string worker_id = 2;
    bool remain_after_disconnect = 3;
    string request_checkpoint_with_name = 4;
}

message LockWorkerPing {
    string worker_type = 1;
    string worker_id = 2;
}

message LockConfirmation {
    bool confirmation = 1;
    string message = 2;
}

message LockList {
    repeated string lock_names = 1;
}

message NameFilter {
    string filter = 1;
}

message LockReplaceRequest {
    string old_lock_name = 1;
    string new_lock_name = 2;
    string worker_id = 3;
    bool new_lock_remains_after_disconnect = 4;
    string request_checkpoint_with_name = 5;
}

service LockServer {
    rpc TryToCheckoutLock (LockRequest) returns (LockConfirmation) {}
    rpc ReleaseLock (LockRequest) returns (LockConfirmation) {}

    rpc GetAllLocksWithString(NameFilter) returns (LockList) {}
    rpc ReplaceLock(LockReplaceRequest) returns (LockConfirmation) {}

    rpc Ping (LockWorkerPing) returns (LockConfirmation) {}
}